feat: add unified multimodal chat inputs (#1159)
